--- a/front/glasses_manager/package.json
+++ b/front/glasses_manager/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
+    "ant-design-vue": "^3.3.0-beta.4",
+    "axios": "^1.2.3",
     "countup.js": "^2.3.2",
     "cropper": "^4.1.0",
     "ele-admin-pro": "^1.10.1",
     "js": "^0.1.0",
     "jsbarcode": "^3.11.5",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
